# pdf-handouts

./: .gitignore  CLAUDE.md  Cargo.toml  LIBRARY.md  ORIGINAL_DESIGN_PDF_HANDOUTS.md  README.md  STATUS.md
.github/workflows/: release.yml
examples/: check_final_pdf.rs  check_font_copy.rs  check_font_object.rs  check_merged.rs  check_resources.rs  compare_old_new.rs  compare_pdfs.rs  create_test_merge.rs  debug_content.rs  debug_get_pages.rs  debug_imbalance.rs  debug_merge.rs  debug_new_id.rs  debug_object_collection.rs  debug_overlay.rs  debug_overlay_detailed.rs  debug_pages.rs  debug_transform_detection.rs  decompress_watermark.rs  demo_dates.rs  demo_direct_headers.rs  demo_full_workflow.rs  demo_multiline_footer.rs  demo_watermark.rs  find_fonts.rs  inspect_all_pages.rs  inspect_direct_pdf.rs  inspect_merged.rs  inspect_pages.rs  inspect_resources.rs  inspect_single.rs  inspect_transforms.rs  inspect_watermark_content.rs  inspect_xobject.rs  inspect_xobject_decompress.rs  inspect_xobject_detail.rs  show_full_content.rs  test_all_renumber.rs  test_inherit.rs  test_prepend.rs  (+7 more)
src/: date.rs  error.rs  layout.rs  lib.rs
src/pdf/: create.rs  headers.rs  merge.rs  metadata.rs  mod.rs
tests/: integration.rs
