[package]
name = "pdf-handouts"
version = "0.2.0"
edition = "2021"
authors = ["Rick Wilson"]
description = "Cross-platform PDF manipulation tool for merging PDFs and adding headers/footers"
license = "MIT OR Apache-2.0"

[[bin]]
name = "pdf-handouts"
path = "src/bin/pdf-handouts.rs"

[dependencies]
# PDF manipulation and merging
lopdf = "0.38"  # Updated to latest version for better page tree handling

# PDF creation for headers/footers
krilla = "0.3"
tiny-skia-path = "0.11"
rustybuzz = "0.18"  # Text shaping and measurement

# CLI framework
clap = { version = "4.5", features = ["derive", "cargo"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Date parsing
chrono = "0.4"

# File globbing
glob = "0.3"

[dev-dependencies]
# Testing utilities
tempfile = "3.10"
